[package]
name = "vibrato-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vibrato = "0.5.2"
clap = { version = "4.5.54", features = ["derive"] }  # MIT or Apache-2.0
zstd = "0.13.3"  # MIT

[profile.release.build-override]
opt-level = 3
